# django-minutes

./: .coverage  .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  README.md  coverage.xml  create_stuff.py  pyproject.toml  pytest.ini  runtests.py  tox.ini
.github/workflows/: coverage.yml  lint.yml  tests.yml
minutes/: api.py  apps.py  filters.py  models.py  paginators.py  permissions.py  schema.py  serializers.py  views.py
minutes/auth/: __init__.py  api.py  apps.py  authentication.py  models.py  serializers.py  views.py
minutes/auth/migrations/: 0001_initial.py  0002_token_expires.py  0003_auto_20200426_1343.py  0004_auto_20200426_1806.py
minutes/frontend/: urls.py  views.py
minutes/frontend/static/app/: asset-manifest.json  precache-manifest.7f77367ad5bbbba886c06c8caa568f55.js  service-worker.js
minutes/frontend/static_src/: .env  .env.development  README.md  config-overrides.js  openapi.json  package-lock.json  package.json  tsconfig.json
minutes/frontend/static_src/scripts/: update_api_client.sh
minutes/frontend/static_src/src/: Administration.tsx  App.tsx  index.tsx  routes.test.tsx  routes.tsx
minutes/frontend/static_src/src/api/: .openapi-generator-ignore  client.ts  runtime.ts
minutes/management/commands/: generate_schema.py
minutes/migrations/: 0001_initial.py  0002_auto_20200421_1951.py  0002_auto_20200425_0846.py  0003_auto_20200423_1626.py  0003_auto_20200425_1006.py  0004_invitation.py  0005_delete_invitation.py
minutes/templates/minutes/mails/: invitation.txt
minutes/urls/: v1.py
minutes_tests/: settings.py
minutes_tests/auth/e2e/: test_passwordchange.py  test_token_auth_and_refresh.py  test_token_claim.py
minutes_tests/auth/unit/: test_token_authentication.py
minutes_tests/e2e/: test_agendaitem.py  test_anonymous_vote.py  test_decision.py  test_invitation.py  test_meeting.py  test_passwordchange.py  test_rollcall_vote.py  test_subitem.py  test_user.py  test_vote_choice.py
minutes_tests/fixtures/: meeting_scenario.yaml
minutes_tests/frontend/e2e/: test_frontend_view.py
minutes_tests/scenarios/: agenda_subitem_scenario.py  agendaitem_scenario.py  anonymous_vote_scenario.py  decision_scenario.py  meeting_scenario.py  rollcall_vote_scenario.py  vote_choice_scenario.py
minutes_tests/unit/: test_app.py  test_related_meeting_owned_permission.py  test_related_series_owned_permission.py
minutes_workbench/: manage.py  settings.py  urls.py
(+78 files in other folders)
