[tool.poetry]
name = "django-minutes"
version = "0.0.1"
description = "A django module providing a minutes taking app"
authors = ["Jonatan Zint <jonatan@ctrl.alt.coop>"]
license = "MIT"
packages = [
    { include = "minutes" },
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.0"
# Using unreleased AutoSchema(operation_id_base="") feature, as well as component schemas for responses - replace with stable once released
djangorestframework = {git = "https://github.com/l0rn/django-rest-framework.git", branch="component_schemas_for_responses"}
django-ordered-model = "^3.3.0"
pyyaml = "^5.3.1"
uritemplate = "^3.0.1"
django-filter = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest-django = "^3.9.0"
ipdb = "^0.13.2"
tox = "^3.14.6"
pylint = "^2.4.4"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12, <1"]
build-backend = "poetry.masonry.api"
