[tool.poetry]
name = "django-minutes"
version = "0.0.1"
description = "A django module providing a minutes taking app"
authors = ["Jonatan Zint <jonatan@ctrl.alt.coop>"]
license = "MIT"
packages = [
    { include = "minutes" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.0"
# Using unreleased AutoSchema(operation_id_base="") feature, as well as component schemas for responses - replace with stable once released
djangorestframework = "^3.14.0"
django-ordered-model = "^3.6.0"
pyyaml = "^6.0.0"
uritemplate = "^4.1.1"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
ipdb = "^0.13.11"
tox = "^4.4.4"
pylint = "^2.16.0"
coverage = "^7.1.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
